<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:icon="@drawable/accountcircle"
            android:title="@string/movie" />
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/accountcircle"
            android:title="@string/TV" />

    </group>

    <item android:title="@string/account_account_TMDB">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/accountcircle"
                    android:title="@string/account_favMovie" />
                <item
                    android:icon="@drawable/accountcircle"
                    android:title="@string/account_favTv" />
                <item
                    android:icon="@drawable/accountcircle"
                    android:title="@string/account_history"/>
                <item
                    android:id="@+id/rated"
                    android:icon="@drawable/accountcircle"
                    android:title="@string/account_rated"/>
            </group>
        </menu>
    </item>
</menu>